--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -5,6 +5,6 @@ $color-white: #FFFFFF;
 
 /* Breakpoints */
 $breakpoint-tablet: 1168px;
-$breakpoint-smartphone: 920px;
+$breakpoint-mobile: 920px;
 $large-desktop-width: 1320px;
-$short-smartphone-height: 800px;
+$short-mobile-height: 800px;
