--- a/src/styles/imports/typography.module.scss
+++ b/src/styles/imports/typography.module.scss
@@ -1,6 +1,33 @@
 @import './index';
 
-.t-h1 {
+.h2 {
   font-size: 96px;
+  font-weight: 600;
+}
+
+.h3 {
+  font-size: 36px;
   font-weight: 500;
+  line-height: 1.2;
+}
+
+.h4 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.button {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.cta {
+  font-size: 48px;
+  font-weight: 400;
 }
