--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -1,6 +1,7 @@
 /* Colors */
 $color-black: #000000;
 $color-blue: #3E66D7;
+$color-blue--light: #7CC4E5;
 $color-white: #FFFFFF;
 
 /* Breakpoints */
