--- a/src/components/sections/Inspiration/style.module.scss
+++ b/src/components/sections/Inspiration/style.module.scss
@@ -25,7 +25,7 @@
 .gifContainer {
   opacity: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   transition: opacity .3s ease-in-out;
 
   &.isVisible {
