--- a/src/components/sections/Instructions/accordion.scss
+++ b/src/components/sections/Instructions/accordion.scss
@@ -12,7 +12,7 @@
       border: none;
       color: $color-white;
       cursor: pointer;
-      padding: 59px 0;
+      padding: 59px 60px 59px 0;
       transition: .4s;
       width: 100%;
     }
