--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -3,6 +3,7 @@ $color-black: #000000;
 $color-blue: #3E66D7;
 $color-blue--light: #7CC4E5;
 $color-white: #FFFFFF;
+$color-pink: #FFB4C8;
 
 /* Breakpoints */
 $breakpoint-tablet: 1168px;
