--- a/src/components/sections/Difference/style.module.scss
+++ b/src/components/sections/Difference/style.module.scss
@@ -7,5 +7,58 @@
 }
 
 .title {
+  margin-bottom: 180px;
   text-align: center;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.item {
+  max-width: 320px;
+  position: relative;
+
+  &:hover {
+    .image {
+      opacity: 1;
+    }
+
+    .itemTitle:after {
+      width: 100%
+    }
+  }
+}
+
+.image {
+  opacity: 0;
+  position: absolute;
+  right: 23px;
+  top: -55px;
+  transition: opacity .3s ease-in-out;
+  width: 163px;
+  z-index: 0;
+}
+
+.itemTitle {
+  display: inline-block;
+  margin-bottom: 30px;
+  position: relative;
+
+  &:after {
+    background-color: $color-black;
+    bottom: 0;
+    content: "";
+    height: 2px;
+    left: 0;
+    position: absolute;
+    transition: width .4s ease-in-out;
+    width: 0;
+  }
+}
+
+.bodyText {
+  position: relative;
 }
