--- a/src/components/sections/Testimonial/style.module.scss
+++ b/src/components/sections/Testimonial/style.module.scss
@@ -4,4 +4,11 @@
   background: $color-black;
   color: $color-white;
   padding: 22vh 0;
+  text-align: center;
+}
+
+.text {
+  color: $color-blue--light;
+  margin: 0 auto 50px;
+  max-width: 710px;
 }
