--- a/src/styles/imports/typography.module.scss
+++ b/src/styles/imports/typography.module.scss
@@ -22,6 +22,12 @@
   font-weight: 800;
 }
 
+.body {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
 .button {
   font-size: 18px;
   font-weight: 500;
@@ -35,4 +41,5 @@
 .eyebrow {
   font-size: 22px;
   font-weight: 400;
+  line-height: 1.35;
 }
