--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -4,6 +4,7 @@ $color-blue: #3E66D7;
 $color-blue--light: #7CC4E5;
 $color-white: #FFFFFF;
 $color-pink: #FFB4C8;
+$color-grey: #666666;
 
 /* Breakpoints */
 $breakpoint-tablet: 1168px;
