--- a/src/components/sections/Platform/style.module.scss
+++ b/src/components/sections/Platform/style.module.scss
@@ -30,6 +30,54 @@
   width: 100%;
 }
 
+.visual {
+  position: relative;
+
+  div {
+    position: absolute;
+  }
+}
+
+.circle {
+  // animation: float 3s linear infinite;
+  background: #F8CA36;
+  border-radius: 100%;
+  height: 140px;
+  left: 8%;
+  top: 12%;
+  width: 140px;
+}
+.rectangle {
+  // animation: float 3s linear infinite;
+  background: #4ABC86;
+  bottom: 5%;
+  height: 186px;
+  left: 10%;
+  width: 186px;
+}
+.triangle {
+  // animation: float 3s linear infinite;
+  border-bottom: 140px solid transparent;
+  border-left: 240px solid $color-pink;
+  border-top: 140px solid transparent;
+  height: 0;
+  right: 8%;
+  top: 20%;
+  width: 0;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .testimonial {
   margin: 60px 0;
 }
