--- a/src/components/sections/Construct/style.module.scss
+++ b/src/components/sections/Construct/style.module.scss
@@ -9,8 +9,11 @@
 }
 
 .title {
-  font-size: 80px;
   margin-bottom: 60px;
+
+  @include respond-to(above-mobile) {
+    font-size: 80px;
+  }
 }
 
 .footer {
