--- a/src/components/elements/Footer/style.module.scss
+++ b/src/components/elements/Footer/style.module.scss
@@ -2,21 +2,62 @@
 
 .footer {
   padding: 70px 0;
+
+  @include respond-to(mobile) {
+    padding: 70px 0 40px;
+  }
 }
 
 .container {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
+
+  @include respond-to(mobile) {
+    flex-wrap: wrap;
+  }
 }
 
 .row {
+
+  &:nth-child(2),
+  &:nth-child(3) {
+    margin-bottom: 70px;
+  }
 
   &:last-child {
     max-width: 340px;
 
     p {
       line-height: 1.5;
+    }
+  }
+}
+
+.social {
+
+  @include respond-to(mobile) {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 60px;
+    order: 4;
+    width: 100%;
+  }
+
+  .line a {
+    align-items: center;
+    display: flex;
+
+    span:nth-child(2) {
+      @include respond-to(mobile) {
+        display: none;
+      }
+    }
+
+    img {
+      @include respond-to(above-mobile) {
+        margin-right: 12px;
+      }
     }
   }
 }
@@ -37,6 +78,10 @@
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 36px;
+
+  @include respond-to(mobile) {
+    margin-bottom: 20px;
+  }
 }
 
 .input {
