--- a/src/components/sections/Accessible/style.module.scss
+++ b/src/components/sections/Accessible/style.module.scss
@@ -1,9 +1,15 @@
+@import '../../../styles/imports/index.scss';
+
 .section {
   padding: 25vh 0;
 }
 
 .title {
   max-width: 550px;
+
+  @include respond-to(mobile) {
+    margin-bottom: 100px;
+  }
 }
 
 .wrapper {
