--- a/src/components/sections/Difference/style.module.scss
+++ b/src/components/sections/Difference/style.module.scss
@@ -9,17 +9,36 @@
 .title {
   margin-bottom: 180px;
   text-align: center;
+
+  @include respond-to(mobile) {
+    margin-bottom: 100px;
+    text-align: left;
+  }
 }
 
 .wrapper {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
+  @include respond-to(above-mobile) {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+  }
 }
 
 .item {
   max-width: 320px;
   position: relative;
+
+  .image {
+    @include respond-to(mobile) {
+      opacity: 1;
+    }
+  }
+
+  &:not(:last-child) {
+    @include respond-to(mobile) {
+      margin-bottom: 80px;
+    }
+  }
 
   &:hover {
     .image {
