--- a/src/components/sections/Instructions/accordion.scss
+++ b/src/components/sections/Instructions/accordion.scss
@@ -15,6 +15,10 @@
       padding: 59px 60px 59px 0;
       transition: .4s;
       width: 100%;
+
+      @include respond-to(mobile) {
+        padding: 40px 20px 40px 0;
+      }
     }
 
     .panel {
