--- a/src/components/sections/Testimonial/style.module.scss
+++ b/src/components/sections/Testimonial/style.module.scss
@@ -5,6 +5,10 @@
   color: $color-white;
   padding: 22vh 0;
   text-align: center;
+
+  @include respond-to(mobile) {
+    text-align: left;
+  }
 }
 
 .text {
