--- a/src/styles/imports/typography.module.scss
+++ b/src/styles/imports/typography.module.scss
@@ -3,6 +3,10 @@
 .h2 {
   font-size: 96px;
   font-weight: 600;
+
+  @include respond-to(mobile) {
+    font-size: 54px;
+  }
 }
 
 .h3 {
@@ -15,6 +19,10 @@
   font-size: 24px;
   font-weight: 500;
   line-height: 1.5;
+
+  @include respond-to(mobile) {
+    font-size: 20px;
+  }
 }
 
 .title {
@@ -36,6 +44,10 @@
 .cta {
   font-size: 48px;
   font-weight: 400;
+
+  @include respond-to(mobile) {
+    font-size: 36px;
+  }
 }
 
 .eyebrow {
