--- a/src/components/sections/Hero/style.module.scss
+++ b/src/components/sections/Hero/style.module.scss
@@ -6,6 +6,7 @@
   color: $color-white;
   display: flex;
   height: 100vh;
+  position: relative;
 
   @include respond-to(mobile) {
     height: unset;
@@ -15,37 +16,109 @@
 
 .wrapper {
   display: block;
+  left: 0;
   margin: auto;
   max-width: 950px;
-  position: relative;
+  position: absolute;
+  right: 0;
   text-align: center;
+  top: 230px;
 }
 
 .title {
-  margin-bottom: 4vh;
+  font-size: 23vw;
+  left: 0;
+  margin-bottom: 517px;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 30vh;
+  transition: font-size 1s ease-in-out 2s, transform 1s ease-in-out 2s;
+}
 
-  @include respond-to(mobile) {
-    margin-bottom: 90px;
+.headline {
+
+  > div {
+    height: 96px;
+    overflow: hidden;
+    width: 100%;
+
+    h2 {
+      position: relative;
+      top: 100%;
+    }
+
+    &:first-child h2 { transition: top .3s ease-in-out 3s; }
+    &:nth-child(2) h2 { transition: top .3s ease-in-out 3.1s; }
+    &:last-child h2 { transition: top .3s ease-in-out 3.2s; }
   }
 }
 
 .subtitle {
+  height: 72px;
   margin: 4vh 0 7vh;
+  overflow: hidden;
 
   @include respond-to(mobile) {
     margin: 40px 0 7vh;
   }
+
+  span {
+    position: relative;
+    top: 100%;
+    transition: top .3s ease-in-out 3.3s;
+  }
+}
+
+.button {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity .5s ease-in-out 3.4s, transform .5s ease-in-out 3.4s;
 }
 
 .stickers {
 
   .sticker {
     height: 115px;
+    opacity: 0;
     position: absolute;
+    top: 30%;
+    transition: top 1s ease-in-out 3.6s, left 1s ease-in-out 3.6s, right 1s ease-in-out 3.6s, opacity .6s ease-in-out 3.8s;
+
+    &:first-child,
+    &:nth-child(3) {
+      left: 45%;
+    }
+    &:last-child,
+    &:nth-child(2) {
+      right: 45%;
+    }
+  }
+}
+
+.appeared {
+
+  .title {
+    font-size: 24px;
+    transform: translateY(-100px);
+  }
+
+  .headline h2,
+  .subtitle span {
+    top: 0;
+  }
+
+  .button {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .sticker {
+    opacity: 1;
 
     &:first-child {
       left: -60px;
-      top: -10px;
+      top: -60px;
 
       @include respond-to(mobile) {
         left: -10px;
@@ -62,7 +135,7 @@
     &:nth-child(3) {
       height: 70px;
       left: 80px;
-      top: 280px;
+      top: 220px;
 
       @include respond-to(mobile) {
         left: -20px;
@@ -71,7 +144,7 @@
     }
     &:nth-child(4) {
       right: 80px;
-      top: 270px;
+      top: 200px;
 
       @include respond-to(mobile) {
         right: -70px;
