--- a/src/components/sections/Trust/style.module.scss
+++ b/src/components/sections/Trust/style.module.scss
@@ -31,9 +31,12 @@
 
 .bulle {
   margin-bottom: 80px;
+  opacity: 0;
   position: relative;
+  transform: translateY(40px);
 
   &:first-child {
+    transition: opacity .3s ease-in-out .6s, transform .5s ease-in-out .6s;
     width: 360px;
 
     @include respond-to(mobile) {
@@ -47,6 +50,10 @@
         width: 290px;
       }
     }
+  }
+
+  &:nth-child(2) {
+    transition: opacity .3s ease-in-out .8s, transform .5s ease-in-out .9s;
   }
 
   p {
@@ -91,6 +98,7 @@
   }
 
   &:nth-child(3) {
+    transition: opacity .3s ease-in-out 1.1s, transform .5s ease-in-out 1.1s;
     width: 370px;
 
     @include respond-to(mobile) {
@@ -107,6 +115,7 @@
   }
 
   &:nth-child(4) {
+    transition: opacity .3s ease-in-out 1.3s, transform .5s ease-in-out 1.3s;
     width: 360px;
 
     @include respond-to(mobile) {
