--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -15,6 +15,11 @@ body {
   -ms-scroll-chaining: none;
 }
 
+.App {
+  height: 100vh;
+  overflow: scroll;
+}
+
 a {
   color: inherit;
   text-decoration: none;
