--- a/src/components/sections/Difference/style.module.scss
+++ b/src/components/sections/Difference/style.module.scss
@@ -30,10 +30,18 @@
   position: relative;
 
   .image {
+    opacity: 0;
     pointer-events: none;
+    position: fixed;
+    right: 23px;
+    top: -55px;
+    transition: opacity .3s ease-in-out;
+    width: 163px;
+    z-index: 0;
 
     @include respond-to(mobile) {
       opacity: 1;
+      position: absolute;
     }
   }
 
@@ -52,16 +60,6 @@
       width: 100%
     }
   }
-}
-
-.image {
-  opacity: 0;
-  position: fixed;
-  right: 23px;
-  top: -55px;
-  transition: opacity .3s ease-in-out;
-  width: 163px;
-  z-index: 0;
 }
 
 .itemTitle {
