--- a/src/components/sections/Platform/style.module.scss
+++ b/src/components/sections/Platform/style.module.scss
@@ -62,6 +62,7 @@
     width: 530px;
 
     @include respond-to(mobile) {
+      height: auto;
       width: 100%;
     }
   }
@@ -74,6 +75,10 @@
 
 .canvas {
   margin-top: 38px;
+
+  @include respond-to(mobile) {
+    margin-top: 0;
+  }
 }
 
 .circle {
