--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -36,3 +36,11 @@ a {
 *:after {
   box-sizing: inherit;
 }
+
+[data-cursor] {
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  transition: opacity .2s ease-in-out;
+  width: 70px;
+}
