Add school page

--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -1,10 +1,11 @@
 /* Colors */
 $color-black: #000000;
-$color-blue: #3E66D7;
 $color-blue--light: #7CC4E5;
-$color-white: #FFFFFF;
-$color-pink: #FFB4C8;
+$color-blue: #3E66D7;
 $color-grey: #666666;
+$color-pink: #FFB4C8;
+$color-red: #F04C36;
+$color-white: #FFFFFF;
 
 /* Breakpoints */
 $breakpoint-tablet: 1168px;
