--- a/src/components/schools/sections/Instructions/accordion.scss
+++ b/src/components/schools/sections/Instructions/accordion.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/imports/index.scss';
+@import '../../../../styles/imports/index.scss';
 
 .accordion {
   border-bottom: 1px solid $color-white;
