--- a/src/components/schools/sections/Difference/style.module.scss
+++ b/src/components/schools/sections/Difference/style.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/imports/index.scss';
+@import '../../../../styles/imports/index.scss';
 
 .section {
   background: $color-white;
