--- a/src/components/schools/sections/Platform/style.module.scss
+++ b/src/components/schools/sections/Platform/style.module.scss
@@ -1,7 +1,7 @@
-@import '../../../styles/imports/index.scss';
+@import '../../../../styles/imports/index.scss';
 
 .section {
-  background: $color-blue;
+  background: $color-red;
   color: $color-white;
   padding: 22vh 0;
 }
