--- a/src/components/schools/sections/Testimonial/style.module.scss
+++ b/src/components/schools/sections/Testimonial/style.module.scss
@@ -1,7 +1,7 @@
-@import '../../../styles/imports/index.scss';
+@import '../../../../styles/imports/index.scss';
 
 .section {
-  background: $color-black;
+  background: $color-red;
   color: $color-white;
   padding: 22vh 0;
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 .text {
-  color: $color-blue--light;
+  color: $color-white;
   margin: 0 auto 50px;
   max-width: 710px;
 
