--- a/src/styles/appear.scss
+++ b/src/styles/appear.scss
@@ -27,7 +27,7 @@
 
     @for $i from 1 through 6 {
       &:nth-child(#{$i}) {
-        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out;
+        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out, box-shadow .2s ease-in-out;
       }
     }
   }
@@ -51,7 +51,7 @@
 
     @for $i from 1 through 6 {
       &:nth-child(#{$i}) {
-        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out;
+        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out, box-shadow .2s ease-in-out;
       }
     }
   }
@@ -77,7 +77,7 @@
 
     @for $i from 1 through 6 {
       &:nth-child(#{$i}) {
-        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out;
+        transition: transform .5s ease-in-out .3s + .1s * $i, opacity .5s ease-in-out .3s + .1s * $i, top .2s ease-in-out, box-shadow .2s ease-in-out;
       }
     }
   }
