--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -4,6 +4,7 @@ $color-blue--light: #7CC4E5;
 $color-blue: #3E66D7;
 $color-grey: #666666;
 $color-pink: #FFB4C8;
+$color-salmon: #FF988A;
 $color-red: #F04C36;
 $color-white: #FFFFFF;
 
