--- a/src/components/schools/elements/Footer/style.module.scss
+++ b/src/components/schools/elements/Footer/style.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/imports/index.scss';
+@import '../../../../styles/imports/index.scss';
 
 .footer {
   padding: 70px 0;
@@ -111,7 +111,7 @@
   }
 
   input[type='submit'] {
-    background: $color-blue;
+    background: $color-red;
     border-radius: 0;
     border-bottom-right-radius: 8px;
     border-left: none;
