--- a/src/components/schools/elements/Menu/style.module.scss
+++ b/src/components/schools/elements/Menu/style.module.scss
@@ -14,6 +14,12 @@
   }
 }
 
+.wrapper {
+  > * {
+    margin-right: 45px;
+  }
+}
+
 .container {
   display: flex;
   justify-content: space-between;
