--- a/src/components/schools/sections/Instructions/style.module.scss
+++ b/src/components/schools/sections/Instructions/style.module.scss
@@ -32,6 +32,29 @@
   padding-right: 60px;
 }
 
+
+.accordionItem {
+
+  &:first-child .image {
+    right: 15%;
+    width: 100%;
+  }
+  &:nth-child(2) .image {
+    right: 10%;
+    width: 90%;
+  }
+  &:nth-child(3) .image {
+    left: 0;
+    margin: auto;
+    right: 0;
+    width: 79%;
+  }
+  &:nth-child(4) .image {
+    height: 100%;
+    right: 10%;
+  }
+}
+
 .cross {
   height: 40px;
   position: relative;
@@ -74,7 +97,6 @@
   width: calc(100% - 540px);
 
   img {
-    max-width: 500px;
     position: absolute;
   }
 
