--- a/src/components/sections/Instructions/style.module.scss
+++ b/src/components/sections/Instructions/style.module.scss
@@ -32,6 +32,30 @@
   padding-right: 60px;
 }
 
+.accordionItem {
+
+  &:first-child .image {
+    top: -60px;
+    width: 100%;
+  }
+  &:nth-child(2) .image {
+    left: 0;
+    margin: auto;
+    right: 0;
+    width: 70%;
+  }
+  &:nth-child(3) .image {
+    left: 0;
+    margin: auto;
+    right: 0;
+    width: 79%;
+  }
+  &:nth-child(4) .image {
+    height: 100%;
+    right: 10%;
+  }
+}
+
 .cross {
   height: 40px;
   position: relative;
@@ -74,7 +98,6 @@
   width: calc(100% - 540px);
 
   img {
-    max-width: 500px;
     position: absolute;
   }
 
