--- a/src/components/schools/sections/Platform/style.module.scss
+++ b/src/components/schools/sections/Platform/style.module.scss
@@ -33,6 +33,12 @@
 
 .textBody {
   margin: 45px 0 60px;
+
+  @include respond-to(mobile) {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 29px;
+  }
 }
 
 .line {
