--- a/src/styles/imports/typography.module.scss
+++ b/src/styles/imports/typography.module.scss
@@ -31,6 +31,12 @@
 }
 
 .body {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29px;
+}
+
+.bodySmall {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
