--- a/src/components/sections/Accessible/style.module.scss
+++ b/src/components/sections/Accessible/style.module.scss
@@ -2,7 +2,7 @@
 
 .section {
   cursor: none;
-  padding: 25vh 0;
+  padding: 25vh 0 16vh;
 }
 
 .title {
@@ -15,13 +15,11 @@
 
 .wrapper {
   margin-left: auto;
-  max-width: 460px;
+  margin-top: 130px;
+  max-width: 480px;
 }
 
 .textBody {
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 1.35;
-  margin: 40px 0 70px;
+  margin-top: 40px;
 }
 
